// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders hovers 1`] = `
<html>
  <head>
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-1pe0egf,[data-css-1pe0egf] {border: 1px solid red;}.css-1iz9137,[data-css-1iz9137] {border: 1px solid red;}.css-1iz9137:hover,[data-css-1iz9137]:hover {border: 1px solid green;}",
        }
      }
    />
  </head>
  <body>
    <div
      data-css-1iz9137=""
    />
  </body>
</html>
`;

exports[`renders using css property 1`] = `
<html>
  <head>
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-1pe0egf,[data-css-1pe0egf] {border: 1px solid red;}",
        }
      }
    />
  </head>
  <body>
    <div
      data-css-1pe0egf=""
    />
  </body>
</html>
`;

exports[`renders using spread 1`] = `
<html>
  <head>
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-1pe0egf,[data-css-1pe0egf] {border: 1px solid red;}",
        }
      }
    />
  </head>
  <body>
    <div
      data-css-1pe0egf=""
    />
  </body>
</html>
`;
